<resources>
    <string name="app_name">TeamUp App</string>
    <!-- activities -->
    <string name="explore_games_label">Explore Games</string>
    <string name="saved_games_label">Saved Games</string>
    <string name="profile_label">Profile</string>
    <string name="profile_edit_label">Edit Profile</string>
    <string name="about_label">About</string>
    <string name="refresh_label">Refresh</string>
    <string name="detail_label">Game Detail</string>
    <string name="create_game_label">Create Game</string>
    <string name="map_label">Map</string>

    <!-- Card View  and detail -->
    <string name="participate_button">Participate</string>
    <string name="participating_button">Participating</string>
    <string name="share_button">Share</string>
    <string name="organized_by">Organized by </string>
    <string name="people_needed">persons needed</string>
    <string name="person_needed">person needed</string>
    <string name="report">Report</string>
    <string name="edit">Edit</string>

    <!-- fragments -->
    <string name="hosted_games_label">Hosted Games</string>
    <string name="your_games_label">Your Games</string>
    <string name="basketball_label">Basketball</string>
    <string name="football_label">Football</string>
    <string name="soccer_label">Soccer</string>
    <string name="tennis_label">Tennis</string>
    <string name="volleyball_label">Volleyball</string>
    <string name="report_string">Thanks for keeping TeamUp safe by reporting this game to us.</string>

    <!-- queries -->
    <string name="basketball_query_key" translatable="false">Basketball</string>
    <string name="football_query_key" translatable="false">Football</string>
    <string name="soccer_query_key" translatable="false">Soccer</string>
    <string name="tennis_query_key" translatable="false">Tennis</string>
    <string name="volleyball_query_key" translatable="false">Volleyball</string>

    <!--profile-->
    <string name= "user_name_edit_text">Username</string>
    <string name= "first_name_edit_text">First Name</string>
    <string name= "last_name_edit_text">Last Name</string>
    <string name= "bio_edit_text">Biography</string>
    <string name="hint_username">Username*</string>
    <string name="hint_first_name">First Name*</string>
    <string name="hint_last_name">Last Name*</string>
    <string name="hint_bio">Biography*</string>
    <string name="err_msg_Uname">Username cannot be empty</string>
    <string name="err_msg_Fname">First name cannot be empty</string>
    <string name="err_msg_Lname">Last name cannot be empty</string>
    <string name="err_msg_Bio">Biography cannot be empty</string>

    <!-- Sync Adapter -->
    <string name="string_bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="sync_account_type" translatable="false">connectandplay.android.duse.com</string>
    <string name="content_authority" translatable="false">com.duse.android.connectandplay.app</string>

    <!-- empty list -->
    <string name="no_game_available">No games currently available</string>
    <string name="no_hosted_game_available">You haven\'t hosted any games yet. Tap on the + button below to add a new game.</string>
    <string name="no_saved_game_available">No saved games yet! Games that you are participating in will appear here.</string>


    <!-- I'm interested in "Game Title" on "Date" at "Time" at "Location". Join me! -->
    <string name="share_title">Share via</string>
    <string name="share">I\'m interested in </string>
    <string name="share_date">on</string>
    <string name="share_time">at</string>
    <string name="share_location">at</string>
    <string name="share_join">. Join me!</string>

    <!-- Geocoding -->
    <string name="service_not_available">Service is not available!</string>
    <string name="invalid_lat_long_used">Invalid Latitude or Longitude value!</string>
    <string name="no_address_found">No address found!</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No Geocoder available!</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'TeamUp\'.</string>

    <!-- Creating a new game -->
    <string name="game_title_hint">Title*</string>
    <string name="game_time_hint">Select Time</string>
    <string name="game_time">00:00 AM</string>
    <string name="game_date_hint">Select Date</string>
    <string name="game_date">November 28, 2016</string>
    <string name="game_sport_hint">Sport*</string>
    <string name="game_location">Location*</string>
    <string name="game_location_hint">Enter Location</string>
    <string name="game_description_hint">Description*</string>
    <string name="game_people_needed_hint">People Needed*</string>
    <string name="game_required_message">Fields with * are required!</string>
    <string name="game_username_message">Username can only be set once!</string>

    <!-- error messages -->
    <string name="error_message_required_field">Required Field!</string>
    <string name="error_message_more_descriptive">Make it more descriptive!</string>
    <string name="error_message_people_needed">Cannot be zero!</string>
    <string name="error_message_toast_not_created">Failed to create game!</string>
    <string name="error_message_toast_user_not_updated">Failed to save user information!</string>

    <!-- about -->
    <string name="programmers">Programmers</string>
    <string name="mahesh_gaya">Mahesh Gaya</string>
    <string name="dalilah_earley">Dalilah Earley</string>
    <string name="kristina_neel">Kristina Neel</string>
    <string name="designer">Designer</string>
    <string name="fatah_aziz">Fatah Aziz</string>
    <string name="writer">Writer</string>
    <string name="jacob_jensen">Jacob Jensen</string>
    <string name="icon">Icon Authors</string>
    <string name="app_desc">Whether you’re a beast on the boards, a cheetah on the soccer field, a freight train with the football, a smashing machine, or a spike monster, TeamUp App will help find the perfect pickup game for you. 
        \n\nYou can explore games by tapping on the tab or use the interactive map to locate games as well as host your own games. 
        \n\nThanks for using TeamUp App! 
    </string>
</resources>
