<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MapsActivity">
    <item
        android:id="@+id/action_saved_games"
        android:title="@string/your_games_label"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile_label"
        android:orderInCategory="200"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about_label"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh_label"
        android:orderInCategory="400"
        app:showAsAction="never"/>


</menu>