<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.ProfileActivity">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="567dp"
        android:weightSum="12"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_placeholder"
            tools:src="@mipmap/ic_launcher"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:id="@+id/imageButton"
            android:layout_weight="4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/hint_username"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:drawableStart="@drawable/ic_outlineperson"
                android:hint="@string/hint_first_name"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:drawableStart="@drawable/ic_outlineperson"
                android:hint="@string/hint_last_name"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/input_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bio"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>